--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,15 @@ body {
   justify-content: space-between;
   width: 100%;
 }
+.container-choice-ataque1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+
+
 
 .error {
   border: 2px solid red;
