--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,21 +18,23 @@ body {
   height: auto;
 }
 
-.valk-choice-container {
+.valk-choice-container,
+.container-choice-ataque {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-}
-.container-choice-ataque1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100%;
 }
 
-
-
+.valk-container {
+  display: table-row;
+  flex-direction: column;
+  font-size: medium;
+  justify-content: space-around;
+  margin: 1;
+  padding: 0;
+  width: 50%;
+  }
 
 .error {
   border: 2px solid red;
@@ -53,7 +55,7 @@ h2 {
   color: #333;
 }
 
-#selectpenas {
+.selectpenas {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
