--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100%;
 }
 
 .valk-container {
@@ -49,6 +48,7 @@ body {
 
 h1 {
   margin: 0;
+  margin-bottom: 40px;
 }
 
 h2 {
